--- a/projects.html
+++ b/projects.html
@@ -157,12 +157,11 @@
 
 	<div class="projects-container">
 		<div class="project-card">
-			<div class="project-icon">💀</div>
 			<div class="project-title">sh1ttybr0ker</div>
 			<div class="project-description">
 				Sh1ttyoobe on lower versions using the br0ker payload in legacy sh1mmer
 			</div>
-			<a href="#" class="project-link">Learn More</a>
+			<a href="https://github.com/insecure-badroom/sh1ttybr0ker" class="project-link">Learn More</a>
 		</div>
 
 		<!-- Add more project cards here -->
