--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 	<canvas id="background"></canvas>
 	<h1>Insecure Badroom</h1>
 	<h2 class="subtitle">A talented group of skids</h2>
-	<img src="https://andrew.jorgensenfamily.us/files/2018/11/insecurly.svg" alt="Insecure Badroom">
+	<img src="favicon.ico" alt="Insecure Badroom">
 	<a href="projects.html" class="projects-btn">View Projects</a>
 
 	<div class="users-container">
