--- a/index.html
+++ b/index.html
@@ -189,8 +189,9 @@
 	<canvas id="background"></canvas>
 	<h1>Insecure Badroom</h1>
 	<h2 class="subtitle">A talented group of skids</h2>
-	<img src="favicon.ico" alt="Insecure Badroom">
+	<img src="favicon.ico" width="250" height="250">
 	<a href="projects.html" class="projects-btn">View Projects</a>
+	<a href="guides.html" class="projects-btn">View Projects</a>
 
 	<div class="users-container">
 		<div class="user-card">
