--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 	<h2 class="subtitle">A talented group of skids</h2>
 	<img src="favicon.ico" width="250" height="250">
 	<a href="projects.html" class="projects-btn">View Projects</a>
-	<a href="guides.html" class="projects-btn">View Projects</a>
+	<a href="guides.html" class="projects-btn">Guides</a>
 
 	<div class="users-container">
 		<div class="user-card">
