--- a/guides.html
+++ b/guides.html
@@ -164,37 +164,34 @@
 		<div class="hero-content">
 			<h1 class="hero-title">Guides</h1>
 			<p class="hero-description">
-				Welcome to our comprehensive guide collection. Here you'll find step-by-step tutorials, 
-				documentation, and resources to help you navigate through various tools and exploits. 
-				Whether you're a beginner or an experienced user, our guides are designed to provide 
-				clear instructions and valuable insights for your journey.
+				Guides for skids. We do not encourage time-wasting or hold responsibility if you do this.
 			</p>
 		</div>
 	</div>
 
 	<div class="guides-container">
 		<div class="guide-card">
-			<h2 class="guide-title">Getting Started</h2>
+			<h2 class="guide-title">How much can I downgrade on my Kernver?</h2>
 			<p class="guide-description">
-				Learn the basics and set up your environment for the first time.
+				Learn kernver basics for skids
 			</p>
-			<a href="#" class="guide-link">Read Guide</a>
+			<a href="kernvers.html" class="guide-link">Read Guide</a>
 		</div>
 
 		<div class="guide-card">
-			<h2 class="guide-title">Advanced Techniques</h2>
+			<h2 class="guide-title">Full unenrollment basics</h2>
 			<p class="guide-description">
-				Dive deeper into advanced methods and optimization strategies.
+				Learn how to fully unenroll with some extra steps to prevent tracking
 			</p>
-			<a href="#" class="guide-link">Read Guide</a>
+			<a href="unenrollment.html" class="guide-link">Read Guide</a>
 		</div>
 
 		<div class="guide-card">
-			<h2 class="guide-title">Troubleshooting</h2>
+			<h2 class="guide-title">misc</h2>
 			<p class="guide-description">
-				Common issues and their solutions to keep you on track.
+				Miscs
 			</p>
-			<a href="#" class="guide-link">Read Guide</a>
+			<a href="misc.html" class="guide-link">Read Guide</a>
 		</div>
 	</div>
 
