--- a/guides.html
+++ b/guides.html
@@ -160,7 +160,7 @@
 	<a href="index.html" class="back-btn">← Back Home</a>
 
 	<div class="hero-section">
-		<img src="https://andrew.jorgensenfamily.us/files/2018/11/insecurly.svg" alt="Guides" class="hero-image">
+		<img src="favicon.ico">
 		<div class="hero-content">
 			<h1 class="hero-title">Guides</h1>
 			<p class="hero-description">
