--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 	<canvas id="background"></canvas>
 	<h1>Insecure Badroom</h1>
 	<h2 class="subtitle">A talented group of skids</h2>
-	<img src="favicon.ico" width="250" height="250">
+	<img src="favicon.ico">
 	<a href="projects.html" class="projects-btn">View Projects</a>
 	<a href="guides.html" class="projects-btn">Guides</a>
 
