--- a/kernvers.html
+++ b/kernvers.html
@@ -197,10 +197,10 @@
 		<!-- Section with Image on Right -->
 		<div class="section section-with-image">
 			<div class="section-content">
-				<h2 class="section-title">Step 1: Knowing your kernver </h2>
+				<h2 class="section-title">Knowing your kernver </h2>
 				<p class="section-text">
 					To find your kernver, press escape + refresh + power on your chromebook, then press tab. Look for kernver = 0x000000"randomnumber",
-          the "random number" is your kernver. 
+          the "random number" is your kernver. On the image on the right, you can press tab to and look in "kernver" at the last number to find your kernver -->>
 				</p>
 				<p class="section-text">
 					- On kv6 you're basically screwed until unenrollment for kv6 comes out
