--- a/kernvers.html
+++ b/kernvers.html
@@ -204,7 +204,7 @@
 				</p>
 				<p class="section-text">
 					- On kv6 you're basically screwed until unenrollment for kv6 comes out
-          - to exit, simply use the arrow keys to navigate to power off, then turn the chromebook pack on with the power button, wherever it is.
+                    - To exit from this stupid-bios-looking screen, simply use the arrow keys to navigate to power off, then turn the chromebook pack on with the power button, wherever it is.
 				</p>
 			</div>
 			<img src="https://sh1mmer.me/assets/recover_black.png" alt="recovery screen where you should press tab to get kernver" class="section-image">
