--- a/kernvers.html
+++ b/kernvers.html
@@ -209,6 +209,18 @@
 			</div>
 			<img src="https://sh1mmer.me/assets/recover_black.png" alt="recovery screen where you should press tab to get kernver" class="section-image">
 		</div>
+		<!-- Section with Image on Left -->
+		<div class="section section-with-image" style="flex-direction: row-reverse;">
+			<div class="section-content">
+				<h2 class="section-title">Possible downgrations</h2>
+				<p class="section-text">
+					Possible downgrading you can do based on your kernver
+				</p>
+				<div class="highlight-box">
+					<strong>⚠️ Important:</strong> Do not attempt risky oobe's as they could set your device to a really high kernver.
+			</div>
+			<img src="kernvers.png" alt="Kernvers" class="section-image">
+		</div>
 
 
 
