--- a/projects.html
+++ b/projects.html
@@ -164,6 +164,15 @@
 			<a href="https://github.com/insecure-badroom/sh1ttybr0ker" class="project-link">Learn More</a>
 		</div>
 
+	<div class="projects-container">
+		<div class="project-card">
+			<div class="project-title">Calcite</div>
+			<div class="project-description">
+				A clean, fast and minimilistic proxy powered by ultraviolet bare.
+			</div>
+			<a href="https://calcite.pages.dev" class="project-link"> main link</a>
+		</div>
+
 		<!-- Add more project cards here -->
 	</div>
 
