--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
 	<div class="container">
 		<div class="hero-section">
 			<h1>Insecure Badroom</h1>
-			<h2 class="subtitle">We don't like securly.</h2>
+			<h2 class="subtitle">Skids who code with AI</h2>
 			<div class="logo-container">
 				<img src="favicon.ico" alt="Insecure Badroom Logo">
 			</div>
