--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
 	<div class="container">
 		<div class="hero-section">
 			<h1>Insecure Badroom</h1>
-			<h2 class="subtitle">Skids who code with AI</h2>
+			<h2 class="subtitle">A talented group of skids. Some better than others,as this site is clearly made with ChatGPT (Sydney and the others)</h2>
 			<div class="logo-container">
 				<img src="favicon.ico" alt="Insecure Badroom Logo">
 			</div>
@@ -378,30 +378,33 @@
 			</div>
 
 			<div class="user-card">
-				<img src="https://cdn.discordapp.com/avatars/1302369693360980030/41ff4df004b59fe00d4672e51abf242a.png?size=4096" alt="Sydney Avatar" class="user-avatar">
+				<img src="https://avatars.githubusercontent.com/u/178336815?v=4" alt="Sydney Avatar" class="user-avatar">
 				<div class="user-name">Sydney</div>
 				<div class="user-id">1302369693360980030</div>
 				<span class="user-status status-online">Online</span>
 			</div>
 
 			<div class="user-card">
-				<img src="https://cdn.discordapp.com/avatars/1400878053638410330/a_default.png?size=4096" alt="Exploit-Master12 Avatar" class="user-avatar">
+				<img src="https://avatars.githubusercontent.com/u/209563069?s=400&u=07e05e7b93e46134c41fec8e91c60e73d2bd5d56&v=4" alt="Exploit-Master12" class="user-avatar">
 				<div class="user-name">Exploit-Master12</div>
-				<div class="user-id">1400878053638410330</div>
-				<span class="user-status status-online">Online</span>
+				<div class="user-id">(Cadel Darrkon)</div>
+				<span class="user-status status-online">Idle</span>
 			</div>
 		</div>
 
 		<div class="projects-section">
-			<h2 class="section-title">Featured Projects</h2>
+			<h2 class="section-title">All Projects</h2>
 			<div class="projects-grid">
 				<a href="https://github.com/insecure-badroom/falaris-stash" class="project-card" target="_blank">
-					<div class="project-title">Falaris Stash</div>
-					<div class="project-desc">Advanced file management and organization system with powerful features.</div>
+					<div class="project-title">Falaris Stash v2 and Darrkon Link Dispenser v4</div>
+					<div class="project-desc">A proxy link dispenser to rival SkipSchool Proxies with at least 20 tools and customizations</div>
 				</a>
 				<a href="https://github.com/insecure-badroom/Calcite" class="project-card" target="_blank">
 					<div class="project-title">Calcite</div>
-					<div class="project-desc">High-performance computing framework for modern applications.</div>
+					<div class="project-desc">A sleek proxy itself.</div>
+		        <a href="https://exploitsbio.vercel.app/" class="project-card" target="_blank">
+					<div class="project-title">Darrkon Network</div>
+					<div class="project-desc">A COMPANY TO RIVAL ANY GROUP OF SKIDS,with way better projects. Except MAYBE this one.</div>
 				</a>
 			</div>
 		</div>
